Initial work on voting system

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <link href="{% static 'remodal/dist/jquery.remodal.css' %}" rel="stylesheet">
     <link href="{% static 'chat/css/chat.css' %}" rel="stylesheet">
     <link href="{% static 'core/css/snptm.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 <body>
 
